--- a/skeleton-es2016/package.json
+++ b/skeleton-es2016/package.json
@@ -46,6 +46,7 @@
     "gulp-eslint": "^1.0.0",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.1",
+    "gulp-postcss": "^6.1.1",
     "gulp-protractor": "1.0.0",
     "gulp-sourcemaps": "^1.3.0",
     "isparta": "^3.1.0",
