--- a/skeleton-es2016/package.json
+++ b/skeleton-es2016/package.json
@@ -81,6 +81,7 @@
       "aurelia-templating-binding": "npm:aurelia-templating-binding@^1.0.0-beta.1.1.2",
       "aurelia-templating-resources": "npm:aurelia-templating-resources@^1.0.0-beta.1.1.3",
       "aurelia-templating-router": "npm:aurelia-templating-router@^1.0.0-beta.1.1.2",
+      "aurelia-ui-virtualization": "npm:aurelia-ui-virtualization@^0.4.5",
       "aurelia-validatejs": "npm:aurelia-validatejs@^0.3.1",
       "bootstrap": "github:twbs/bootstrap@^3.3.5",
       "deep-extend": "npm:deep-extend@^0.4.1",
