--- a/skeleton-es2016/package.json
+++ b/skeleton-es2016/package.json
@@ -70,6 +70,7 @@
       "aurelia-animator-css": "npm:aurelia-animator-css@^1.0.0-beta.1.1.2",
       "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0-beta.1.1.4",
       "aurelia-configuration": "github:vheissu/aurelia-configuration@1.0.6",
+      "aurelia-dialog": "npm:aurelia-dialog@^0.6.2",
       "aurelia-fetch-client": "npm:aurelia-fetch-client@^1.0.0-beta.1.1.1",
       "aurelia-framework": "npm:aurelia-framework@^1.0.0-beta.1.1.4",
       "aurelia-history-browser": "npm:aurelia-history-browser@^1.0.0-beta.1.1.4",
