--- a/skeleton-es2016/package.json
+++ b/skeleton-es2016/package.json
@@ -74,6 +74,7 @@
       "aurelia-fetch-client": "npm:aurelia-fetch-client@^1.0.0-beta.1.1.1",
       "aurelia-framework": "npm:aurelia-framework@^1.0.0-beta.1.1.4",
       "aurelia-history-browser": "npm:aurelia-history-browser@^1.0.0-beta.1.1.4",
+      "aurelia-i18n": "npm:aurelia-i18n@^0.5.3",
       "aurelia-loader-default": "npm:aurelia-loader-default@^1.0.0-beta.1.1.3",
       "aurelia-logging-console": "npm:aurelia-logging-console@^1.0.0-beta.1.1.4",
       "aurelia-pal-browser": "npm:aurelia-pal-browser@^1.0.0-beta.1.1.4",
@@ -88,6 +89,7 @@
       "deep-extend": "npm:deep-extend@^0.4.1",
       "fetch": "github:github/fetch@^0.11.0",
       "font-awesome": "npm:font-awesome@^4.5.0",
+      "i18next-xhr-backend": "npm:i18next-xhr-backend@^0.5.4",
       "jquery": "npm:jquery@^2.2.3",
       "text": "github:systemjs/plugin-text@^0.0.3"
     },
