--- a/skeleton-es2016/package.json
+++ b/skeleton-es2016/package.json
@@ -77,6 +77,7 @@
       "aurelia-i18n": "npm:aurelia-i18n@^0.5.3",
       "aurelia-loader-default": "npm:aurelia-loader-default@^1.0.0-beta.1.1.3",
       "aurelia-logging-console": "npm:aurelia-logging-console@^1.0.0-beta.1.1.4",
+      "aurelia-notification": "npm:aurelia-notification@^1.0.0-rc1",
       "aurelia-pal-browser": "npm:aurelia-pal-browser@^1.0.0-beta.1.1.4",
       "aurelia-polyfills": "npm:aurelia-polyfills@^1.0.0-beta.1.0.3",
       "aurelia-router": "npm:aurelia-router@^1.0.0-beta.1.1.3",
@@ -89,6 +90,7 @@
       "deep-extend": "npm:deep-extend@^0.4.1",
       "fetch": "github:github/fetch@^0.11.0",
       "font-awesome": "npm:font-awesome@^4.5.0",
+      "humane-js": "npm:humane-js@^3.2.2",
       "i18next-xhr-backend": "npm:i18next-xhr-backend@^0.5.4",
       "jquery": "npm:jquery@^2.2.3",
       "text": "github:systemjs/plugin-text@^0.0.3"
