--- a/skeleton-es2016/package.json
+++ b/skeleton-es2016/package.json
@@ -73,6 +73,7 @@
       "aurelia-dialog": "npm:aurelia-dialog@^0.6.2",
       "aurelia-fetch-client": "npm:aurelia-fetch-client@^1.0.0-beta.1.1.1",
       "aurelia-framework": "npm:aurelia-framework@^1.0.0-beta.1.1.4",
+      "aurelia-google-analytics": "github:miguelzakharia/aurelia-google-analytics@^1.0.3",
       "aurelia-history-browser": "npm:aurelia-history-browser@^1.0.0-beta.1.1.4",
       "aurelia-i18n": "npm:aurelia-i18n@^0.5.3",
       "aurelia-loader-default": "npm:aurelia-loader-default@^1.0.0-beta.1.1.3",
