--- a/skeleton-es2016/package.json
+++ b/skeleton-es2016/package.json
@@ -69,6 +69,7 @@
     "dependencies": {
       "aurelia-animator-css": "npm:aurelia-animator-css@^1.0.0-beta.1.1.2",
       "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0-beta.1.1.4",
+      "aurelia-breeze": "npm:aurelia-breeze@^1.2.0",
       "aurelia-configuration": "github:vheissu/aurelia-configuration@1.0.6",
       "aurelia-dialog": "npm:aurelia-dialog@^0.6.2",
       "aurelia-fetch-client": "npm:aurelia-fetch-client@^1.0.0-beta.1.1.1",
@@ -88,6 +89,7 @@
       "aurelia-ui-virtualization": "npm:aurelia-ui-virtualization@^0.4.5",
       "aurelia-validatejs": "npm:aurelia-validatejs@^0.3.1",
       "bootstrap": "github:twbs/bootstrap@^3.3.5",
+      "breeze": "npm:breeze-client@^1.5.6",
       "deep-extend": "npm:deep-extend@^0.4.1",
       "fetch": "github:github/fetch@^0.11.0",
       "font-awesome": "npm:font-awesome@^4.5.0",
