--- a/skeleton-es2016/package.json
+++ b/skeleton-es2016/package.json
@@ -68,6 +68,7 @@
   "jspm": {
     "dependencies": {
       "aurelia-animator-css": "npm:aurelia-animator-css@^1.0.0-beta.1.1.2",
+      "aurelia-auth": "npm:aurelia-auth@^2.1.3",
       "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0-beta.1.1.4",
       "aurelia-breeze": "npm:aurelia-breeze@^1.2.0",
       "aurelia-configuration": "github:vheissu/aurelia-configuration@1.0.6",
