--- a/skeleton-es2016/package.json
+++ b/skeleton-es2016/package.json
@@ -98,6 +98,7 @@
       "humane-js": "npm:humane-js@^3.2.2",
       "i18next-xhr-backend": "npm:i18next-xhr-backend@^0.5.4",
       "jquery": "npm:jquery@^2.2.3",
+      "momentjs": "npm:momentjs@^1.1.7",
       "text": "github:systemjs/plugin-text@^0.0.3"
     },
     "devDependencies": {
