fixed questions and templating

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "chalk": "^1.0.0",
     "espree": "^3.1.4",
+    "merge": "^1.2.0",
     "yeoman-generator": "^0.23.0",
     "yosay": "^1.0.0"
   },
