--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "yeoman-generator"
   ],
   "dependencies": {
+    "acorn": "^3.1.0",
+    "aurelia-binding": "^1.0.0-beta.1.3.6",
     "chalk": "^1.0.0",
     "espree": "^3.1.4",
     "merge": "^1.2.0",
+    "underscore.string": "^3.3.4",
     "yeoman-generator": "^0.23.0",
     "yosay": "^1.0.0"
   },
