--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://github.com/MatthiasF999/generator-awesome-aurelia",
   "author": {
     "name": "Matthias Feldmann",
-    "email": "matthias@feldmann.hamburg",
+    "email": "feldmatt@t-online.de",
     "url": "https://github.com/MatthiasF999"
   },
   "files": [
