--- a/skeleton-esnext/package.json
+++ b/skeleton-esnext/package.json
@@ -47,6 +47,7 @@
     "gulp-htmlmin": "^2.0.0",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
+    "gulp-postcss": "^6.1.1",
     "gulp-protractor": "2.4.0",
     "gulp-sourcemaps": "^1.6.0",
     "isparta": "^4.0.0",
@@ -68,23 +69,38 @@
   "jspm": {
     "dependencies": {
       "aurelia-animator-css": "npm:aurelia-animator-css@^1.0.0-rc.1.0.0",
+      "aurelia-auth": "npm:aurelia-auth@^3.0.2",
       "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0-rc.1.0.0",
+      "aurelia-breeze": "npm:aurelia-breeze@^2.0.1",
+      "aurelia-configuration": "github:JeroenVinke/aurelia-configuration@built",
+      "aurelia-dialog": "npm:aurelia-dialog@^1.0.0-beta.1.1.0",
+      "aurelia-dragula": "npm:aurelia-dragula@^1.2.1",
       "aurelia-fetch-client": "npm:aurelia-fetch-client@^1.0.0-rc.1.0.0",
       "aurelia-framework": "npm:aurelia-framework@^1.0.0-rc.1.0.0",
+      "aurelia-google-analytics": "github:miguelzakharia/aurelia-google-analytics@^1.0.4",
       "aurelia-history-browser": "npm:aurelia-history-browser@^1.0.0-rc.1.0.0",
+      "aurelia-i18n": "npm:aurelia-i18n@^1.0.0-rc.1.0.0",
       "aurelia-loader-default": "npm:aurelia-loader-default@^1.0.0-rc.1.0.0",
       "aurelia-logging-console": "npm:aurelia-logging-console@^1.0.0-rc.1.0.0",
+      "aurelia-notification": "npm:aurelia-notification@^1.0.0-rc3",
       "aurelia-pal-browser": "npm:aurelia-pal-browser@^1.0.0-rc.1.0.0",
       "aurelia-polyfills": "npm:aurelia-polyfills@^1.0.0-rc.1.0.0",
       "aurelia-router": "npm:aurelia-router@^1.0.0-rc.1.0.0",
       "aurelia-templating-binding": "npm:aurelia-templating-binding@^1.0.0-rc.1.0.0",
       "aurelia-templating-resources": "npm:aurelia-templating-resources@^1.0.0-rc.1.0.0",
       "aurelia-templating-router": "npm:aurelia-templating-router@^1.0.0-rc.1.0.0",
+      "aurelia-ui-virtualization": "npm:aurelia-ui-virtualization@^1.0.0-beta.1.0.1",
+      "aurelia-validatejs": "npm:aurelia-validatejs@^0.6.0",
       "bluebird": "npm:bluebird@3.4.1",
       "bootstrap": "github:twbs/bootstrap@^3.3.6",
+      "breeze": "npm:breeze-client@^1.5.8",
+      "deep-extend": "npm:deep-extend@^0.4.1",
       "fetch": "github:github/fetch@^1.0.0",
       "font-awesome": "npm:font-awesome@4.6.3",
+      "humane-js": "npm:humane-js@^3.2.2",
+      "i18next-xhr-backend": "npm:i18next-xhr-backend@^0.6.0",
       "jquery": "npm:jquery@^2.2.4",
+      "moment": "npm:moment@^2.14.1",
       "text": "github:systemjs/plugin-text@^0.0.8"
     },
     "devDependencies": {}
